--- a/appspec.yml
+++ b/appspec.yml
@@ -1,18 +1,22 @@
 version: 0.0
 os: linux
+
 files:
   - source: /
-    destination: /var/www/html/
+    destination: /var/www/html/test
+
 hooks:
-  BeforeInstall:
-    - location: scripts/install_dependencies
-      timeout: 300
-      runas: root
-    - location: scripts/start_server
-      timeout: 300
-      runas: root
   ApplicationStop:
     - location: scripts/stop_server
       timeout: 300
       runas: root
+  BeforeInstall:
+    - location: scripts/uninstall
+      timeout: 300
+      runas: root
+  ApplicationStart:
+    - location: scripts/start_server
+      timeout: 300
+      runas: root
+
 
